<resources>
    <string name="admob_app_id">ca-app-pub-7162024436144124~3398524947</string>
    <string name="admob_puplisher_id">ca-app-pub-7162024436144124/3108801650</string>

    <string name="search">Suchen</string>
    <string name="bookmark">Merkzettel</string>
    <string name="imprint">Impressum</string>
    <string name="privacy">Datenschutz</string>
    <string name="agb">AGB</string>
    <string name="app_name">Flohmarkt Termine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="website_url">www.flohmarkt-termine.net</string>
    <string name="share_app_title">Flohmarkt-Termine teilen</string>
    <string name="share_message_headline">Hey,\nich suche gerade Flohmarkt-Termine auf meinem Android Smartphone.</string>
    <string name="share_message">Es gibt nun dafür eine App.\nDu kannst sie hier downloaden:</string>
    <string name="share_playstore_link">https://play.google.com/store/apps/details?id=de.feine_medien.flohmarkt&amp;hl=de</string>
    <string name="give_feedback_subject">Feedback zur Android App Flohmarkt Termine</string>
    <string name="change">Ändern</string>
    <string name="organizer">Veranstalter</string>
    <string name="add_to_calender">Zum Kalender hinzufügen</string>
    <string name="add_to_bookmarks">In Merkzettel speichern</string>
    <string name="added_to_bookmarks">Zur Merkliste hinzugefügt</string>
    <string name="description">Beschreibung</string>
    <string name="more_description">mehr…</string>
    <string name="less_description">…weniger</string>
    <string name="make_call">Anrufen</string>
    <string name="search_radius">Suche innerhalb </string>
    <string name="add_to_contacts">Zu Kontakten hinzufügen</string>
    <string name="no_geo_part_1">Standort konnte nicht</string>
    <string name="no_geo_part_2">ermittelt werden.</string>
    <string name="no_calendar_app_installed">Keine Kalender App installiert</string>
    <string name="no_maps_app_installed">Keine Maps App installiert</string>
    <string name="no_location_available">Aktueller Standort konnte nicht ermittelt werden"</string>
    <string name="no_geo_permission_given">Sie haben die Standortfreigabe nicht erteilt</string>
    <string name="detail_notice">Trotz sorgfältiger Recherche kann es zu Irrtümern oder kurzfristigen Absagen kommen. Für die Richtigkeit und die Aktualität der gemachten Angaben, insbesondere für Termine und Preise übernehmen wir keine Gewähr. Bitte wenden Sie sich im Zweifel an den Veranstalter und vergewissern Sie sich ob Termine, Preise, Veranstaltungsorte etc. Noch Ihre Gültigkeit haben.</string>

    <string name="upper_area">UMKREIS</string>
    <string name="current_place">Aktueller Ort</string>
    <string name="current_location">Aktueller Standort</string>
    <string name="zip_location">PLZ / Ort</string>
    <string name="area">Umkreis</string>
    <string name="upper_period">ZEITRAUM</string>
    <string name="from">ab</string>
    <string name="in_the_following">in den folgenen</string>
    <string name="upper_market">MARKT</string>
    <string name="all_categories">Alle Kategorien</string>
    <string name="antik_market">Antikmarkt</string>
    <string name="flea_market">Flohmarkt</string>
    <string name="art_work">Kunsthandwerk</string>
    <string name="city_party">Stadtfest</string>
    <string name="collection">Sammelbörse</string>
    <string name="upper_roof">ÜBERDACHUNG</string>
    <string name="no_input">keine Angabe</string>
    <string name="no_roof">nicht überdacht</string>
    <string name="part_roof">teilw. überdacht</string>
    <string name="full_roof">überdacht</string>
    <string name="search_for_city_or_zip">Nach Ort oder Plz suchen</string>
    <string name="add_with_notice">Mit Notiz eintragen</string>
    <string name="show_me_in_following_days">Zeige mir Events in den nächsten:</string>
    <string name="no_results_found">Zu diesen Kriterien, wurden keine Ergebnisse gefunden.</string>
    <string name="no_bookmarks">Sie haben keine Events gespeichert.</string>
    <string name="really_want_to_delete_event">Event wirklich löschen?</string>
    <string name="bookmark_deleted_successful">Event wurde entfernt</string>
    <string name="no_city_or_zip">Wenn Sie nicht Ihren aktuellen Standort für die Suche verwenden, müssen Sie eine Stadt oder eine Postleitzahl angeben.</string>

    <string-array name="following_days_items">
        <item>7 Tagen</item>
        <item>14 Tagen</item>
        <item>30 Tagen</item>
    </string-array>

    <string-array name="bookmark_notice">
        <item>Nehme ich dran teil</item>
        <item>Noch unklar</item>
        <item>Will ich besuchen</item>
        <item>Kein Stellplatz frei</item>
    </string-array>
</resources>
