<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/v_topbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9c9c9c"
            app:layout_constraintTop_toBottomOf="@id/v_topbar" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Hamburg"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/v_topbar"
            app:layout_constraintTop_toTopOf="@id/v_topbar" />

        <TextView
            android:id="@+id/tv_search_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="Suche innerhalb 20km"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/v_topbar"
            app:layout_constraintStart_toStartOf="@id/v_topbar"
            app:layout_constraintTop_toBottomOf="@id/tv_city" />

        <Button
            android:id="@+id/btn_change"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/change"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/v_topbar"
            app:layout_constraintEnd_toEndOf="@id/v_topbar"
            app:layout_constraintTop_toTopOf="@id/v_topbar" />

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_topbar" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_puplisher_id"
            app:layout_constraintTop_toBottomOf="@id/iv_banner" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adView" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_topbar" />

        <TextView
            android:id="@+id/tv_no_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/no_results_found"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_topbar" />

        <TextView
            android:id="@+id/tv_no_city_or_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/no_city_or_zip"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_topbar" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>