<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    tools:context="de.feine_medien.flohmarkt.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="Flohmarkt, Neugraben"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_banner" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Flohmarkt Verkaufs Raum"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="16.7. 06:00 - 14:00"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Am Neugrabener bahnhof 33"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <TextView
        android:id="@+id/tv_zipcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="21149 Hamburg"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hamburg"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_zipcode" />

    <Button
        android:id="@+id/btn_organizer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_arrow_right_accent"
        android:text="@string/organizer"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_city" />

    <Button
        android:id="@+id/btn_add_to_calender"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/add_to_calender"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/btn_organizer" />

    <Button
        android:id="@+id/btn_add_to_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/add_to_bookmarks"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_to_calender" />

</android.support.constraint.ConstraintLayout>
